--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fontsource-variable/inter": "^5.0.20",
     "@unpic/qwik": "^0.0.46",
     "gray-matter": "^4.0.3",
+    "lottie-web": "^5.12.2",
     "markdown-it": "^14.1.0",
     "node-fetch": "3.3.2",
     "tailwind-merge": "^2.5.2"
