--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lottie-web": "^5.12.2",
     "markdown-it": "^14.1.0",
     "node-fetch": "3.3.2",
+    "qwik-lottie": "^0.1.8",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
